<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_screen_bg"
    tools:context="edna.ceniza.com.swoosh.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/swoosh_logo"
        android:paddingTop="20dp"
        android:layout_marginTop="12dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/firstText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_h1"
        android:textAllCaps="true"
        android:textSize="57sp"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/secondText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_h2"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:layout_below="@+id/firstText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/thirdText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/main_h3"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/secondText"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/start"
        android:background="@drawable/button"
        android:alpha="0.7"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/getstarted"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

</RelativeLayout>